<resources>
    <string name="app_name">Automato</string>
    <string name="machines">Апарати</string>
    <string name="companies">Компанії</string>
    <string name="actions">Дії</string>
    <string name="account">Акаунт</string>
    <string name="email">Електрона пошта</string>
    <string name="password">Пароль</string>
    <string name="forgotPassword">Забули пароль</string>
    <string name="login">Увійти</string>
    <string name="createAccount">Створити акаунт</string>
    <string name="clickToExit">Для виходу нажміть ще раз</string>
    <string name="title_activity_login">Automato</string>
    <string name="wrongLogData">Неправильний пароль або електрона пошта</string>
    <string name="downloadError">Помилка при отриманні даних з серверу</string>
    <string name="macInfo">Інформація про апарат</string>
    <string name="compInfo">Інформація про компанію</string>
    <string name="infoAcivity_sample">______</string>
    <string name="logs">Логи</string>
    <string name="resolveWarnings">Вирішити всі попередження</string>
    <string name="placeholderMacId">Mac_id: %1$s</string>
    <string name="ph_type">Тип акаунту: %1$s</string>
    <string name="ph_regDate">Дата реєстрації: %1$s</string>
    <string name="ph_email">Електрона пошта: %1$s</string>
    <string name="ph_macNum">Кількість апаратів: %1$s</string>
    <string name="ph_phoneNum">Номер телефону: %1$s</string>
    <string name="ph_location">Місцезнаходження: %1$s</string>
    <string name="ph_descry">Додаткова інформація: %1$s</string>
    <string name="backArrow">Кнопка Назад</string>
    <string name="phoneNumber">Номер телефону</string>
    <string name="location">Місцезнаходження</string>
    <string name="additionalInfo">Додаткова інформація</string>
    <string name="regData">Дата реєстрації</string>
    <string name="addMac">Додати апарат</string>
    <string name="delMac">Видалити апарат</string>
    <string name="bindMac">Прив\'язати апарат</string>
    <string name="unbindMac">Відв\'язати апарат</string>
    <string name="delLogs">Видалити логи</string>
    <string name="exit">Вийти</string>
    <string name="delete">Видалити</string>
    <string name="macId">MacID</string>
    <string name="code">Code</string>
    <string name="add">Додати</string>
    <string name="bind">Прив\'язати</string>
    <string name="unbind">Відв\'язати</string>
    <string name="name">Ім\'я</string>
    <string name="opSuccess">Операція прошла успішно</string>
    <string name="opFail">Виникла якась помилка</string>
    <string name="sendReq">Запрос відправлений</string>
</resources>
