<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/bottom_container_favouriteAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="5dp"
            android:rowCount="1">

            <ImageView
                android:id="@+id/back_arrow_info2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/backArrow"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/compInfo"
                android:textAlignment="center"
                android:textSize="18sp" />
        </GridLayout>

        <TextView
            android:id="@+id/comp_name_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@color/colorLightGray"
            android:padding="8dp"
            android:text="@string/infoAcivity_sample"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/comp_email_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:text="@string/infoAcivity_sample"
                android:textAlignment="textStart"
                android:textColor="@color/colorLightBlack"
                android:textSize="19sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/phoneNumber"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/phoneNumber_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/infoAcivity_sample"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/location"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/location_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/infoAcivity_sample"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/regData"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/registration_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/infoAcivity_sample"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/additionalInfo"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/descry_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/infoAcivity_sample"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>