<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/add_mac_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/ripple">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_leak_add_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="19sp"
                    android:text="@string/addMac" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:id="@+id/delete_mac_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/ripple">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_leak_remove_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="19sp"
                    android:text="@string/delMac" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:id="@+id/bind_mac_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/ripple">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_linear_scale_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="19sp"
                    android:text="@string/bindMac" />
            </LinearLayout>

            <View style="@style/Divider" />


            <LinearLayout
                android:id="@+id/unbind_mac_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/ripple">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_blur_off_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="19sp"
                    android:text="@string/unbindMac" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:id="@+id/del_log_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/ripple">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_delete_sweep_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="19sp"
                    android:text="@string/delLogs" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>